--- a/public/style.css
+++ b/public/style.css
@@ -1,222 +1,163 @@
 @charset "UTF-8";
-code[class^=language-] {
-  /* Comment */
-  /* Error */
-  /* Keyword */
-  /* Comment.Multiline */
-  /* Comment.Preproc */
-  /* Comment.Single */
-  /* Comment.Special */
-  /* Generic.Deleted */
-  /* Generic.Emph */
-  /* Generic.Error */
-  /* Generic.Heading */
-  /* Generic.Inserted */
-  /* Generic.Output */
-  /* Generic.Prompt */
-  /* Generic.Strong */
-  /* Generic.Subheading */
-  /* Generic.Traceback */
-  /* Keyword.Constant */
-  /* Keyword.Declaration */
-  /* Keyword.Namespace */
-  /* Keyword.Pseudo */
-  /* Keyword.Reserved */
-  /* Keyword.Type */
-  /* Literal.Number */
-  /* Literal.String */
-  /* Name.Attribute */
-  /* Name.Builtin */
-  /* Name.Class */
-  /* Name.Constant */
-  /* Name.Decorator */
-  /* Name.Exception */
-  /* Name.Function */
-  /* Name.Label */
-  /* Name.Namespace */
-  /* Name.Property */
-  /* Name.Tag */
-  /* Name.Variable */
-  /* Operator.Word */
-  /* Text.Whitespace */
-  /* Literal.Number.Float */
-  /* Literal.Number.Hex */
-  /* Literal.Number.Integer */
-  /* Literal.Number.Oct */
-  /* Literal.String.Backtick */
-  /* Literal.String.Char */
-  /* Literal.String.Doc */
-  /* Literal.String.Double */
-  /* Literal.String.Escape */
-  /* Literal.String.Heredoc */
-  /* Literal.String.Interpol */
-  /* Literal.String.Other */
-  /* Literal.String.Regex */
-  /* Literal.String.Single */
-  /* Literal.String.Symbol */
-  /* Name.Builtin.Pseudo */
-  /* Name.Variable.Class */
-  /* Name.Variable.Global */
-  /* Name.Variable.Instance */
-  /* Literal.Number.Integer.Long */ }
-  code[class^=language-] .hll {
-    background-color: #ffffcc; }
-  code[class^=language-] .c {
-    color: #888888; }
-  code[class^=language-] .err {
-    color: #a61717;
-    background-color: #e3d2d2; }
-  code[class^=language-] .k {
-    color: #008800;
-    font-weight: bold; }
-  code[class^=language-] .cm {
-    color: #888888; }
-  code[class^=language-] .cp {
-    color: #cc0000;
-    font-weight: bold; }
-  code[class^=language-] .c1 {
-    color: #888888; }
-  code[class^=language-] .cs {
-    color: #cc0000;
-    font-weight: bold;
-    background-color: #fff0f0; }
-  code[class^=language-] .gd {
-    color: #000000;
-    background-color: #ffdddd; }
-  code[class^=language-] .ge {
-    font-style: italic; }
-  code[class^=language-] .gr {
-    color: #aa0000; }
-  code[class^=language-] .gh {
-    color: #303030; }
-  code[class^=language-] .gi {
-    color: #000000;
-    background-color: #ddffdd; }
-  code[class^=language-] .go {
-    color: #888888; }
-  code[class^=language-] .gp {
-    color: #555555; }
-  code[class^=language-] .gs {
-    font-weight: bold; }
-  code[class^=language-] .gu {
-    color: #606060; }
-  code[class^=language-] .gt {
-    color: #aa0000; }
-  code[class^=language-] .kc {
-    color: #008800;
-    font-weight: bold; }
-  code[class^=language-] .kd {
-    color: #008800;
-    font-weight: bold; }
-  code[class^=language-] .kn {
-    color: #008800;
-    font-weight: bold; }
-  code[class^=language-] .kp {
-    color: #008800; }
-  code[class^=language-] .kr {
-    color: #008800;
-    font-weight: bold; }
-  code[class^=language-] .kt {
-    color: #888888;
-    font-weight: bold; }
-  code[class^=language-] .m {
-    color: #0000DD;
-    font-weight: bold; }
-  code[class^=language-] .s, code[class^=language-] .s-Atom {
-    color: #dd2200;
-    background-color: #fff0f0; }
-  code[class^=language-] .na {
-    color: #336699; }
-  code[class^=language-] .nb {
-    color: #003388; }
-  code[class^=language-] .nc {
-    color: #bb0066;
-    font-weight: bold; }
-  code[class^=language-] .no {
-    color: #003366;
-    font-weight: bold; }
-  code[class^=language-] .nd {
-    color: #555555; }
-  code[class^=language-] .ne {
-    color: #bb0066;
-    font-weight: bold; }
-  code[class^=language-] .nf {
-    color: #0066bb;
-    font-weight: bold; }
-  code[class^=language-] .nl {
-    color: #336699;
-    font-style: italic; }
-  code[class^=language-] .nn {
-    color: #bb0066;
-    font-weight: bold; }
-  code[class^=language-] .py {
-    color: #336699;
-    font-weight: bold; }
-  code[class^=language-] .nt {
-    color: #bb0066;
-    font-weight: bold; }
-  code[class^=language-] .nv {
-    color: #336699; }
-  code[class^=language-] .ow {
-    color: #008800; }
-  code[class^=language-] .w {
-    color: #bbbbbb; }
-  code[class^=language-] .mf {
-    color: #0000DD;
-    font-weight: bold; }
-  code[class^=language-] .mh {
-    color: #0000DD;
-    font-weight: bold; }
-  code[class^=language-] .mi {
-    color: #0000DD;
-    font-weight: bold; }
-  code[class^=language-] .mo {
-    color: #0000DD;
-    font-weight: bold; }
-  code[class^=language-] .sb {
-    color: #dd2200;
-    background-color: #fff0f0; }
-  code[class^=language-] .sc {
-    color: #dd2200;
-    background-color: #fff0f0; }
-  code[class^=language-] .sd {
-    color: #dd2200;
-    background-color: #fff0f0; }
-  code[class^=language-] .s2 {
-    color: #dd2200;
-    background-color: #fff0f0; }
-  code[class^=language-] .se {
-    color: #0044dd;
-    background-color: #fff0f0; }
-  code[class^=language-] .sh {
-    color: #dd2200;
-    background-color: #fff0f0; }
-  code[class^=language-] .si {
-    color: #3333bb;
-    background-color: #fff0f0; }
-  code[class^=language-] .sx {
-    color: #22bb22;
-    background-color: #f0fff0; }
-  code[class^=language-] .sr {
-    color: #008800;
-    background-color: #fff0ff; }
-  code[class^=language-] .s1 {
-    color: #dd2200;
-    background-color: #fff0f0; }
-  code[class^=language-] .ss {
-    color: #aa6600;
-    background-color: #fff0f0; }
-  code[class^=language-] .bp {
-    color: #003388; }
-  code[class^=language-] .vc {
-    color: #336699; }
-  code[class^=language-] .vg {
-    color: #dd7700; }
-  code[class^=language-] .vi {
-    color: #3333bb; }
-  code[class^=language-] .il {
-    color: #0000DD;
-    font-weight: bold; }
+.highlighter-rouge .hll {
+  background-color: #ffffcc; }
+.highlighter-rouge .c {
+  color: #888888; }
+.highlighter-rouge .err {
+  color: #a61717;
+  background-color: #e3d2d2; }
+.highlighter-rouge .k {
+  color: #008800;
+  font-weight: bold; }
+.highlighter-rouge .cm {
+  color: #888888; }
+.highlighter-rouge .cp {
+  color: #cc0000;
+  font-weight: bold; }
+.highlighter-rouge .c1 {
+  color: #888888; }
+.highlighter-rouge .cs {
+  color: #cc0000;
+  font-weight: bold;
+  background-color: #fff0f0; }
+.highlighter-rouge .gd {
+  color: #000000;
+  background-color: #ffdddd; }
+.highlighter-rouge .ge {
+  font-style: italic; }
+.highlighter-rouge .gr {
+  color: #aa0000; }
+.highlighter-rouge .gh {
+  color: #303030; }
+.highlighter-rouge .gi {
+  color: #000000;
+  background-color: #ddffdd; }
+.highlighter-rouge .go {
+  color: #888888; }
+.highlighter-rouge .gp {
+  color: #555555; }
+.highlighter-rouge .gs {
+  font-weight: bold; }
+.highlighter-rouge .gu {
+  color: #606060; }
+.highlighter-rouge .gt {
+  color: #aa0000; }
+.highlighter-rouge .kc {
+  color: #008800;
+  font-weight: bold; }
+.highlighter-rouge .kd {
+  color: #008800;
+  font-weight: bold; }
+.highlighter-rouge .kn {
+  color: #008800;
+  font-weight: bold; }
+.highlighter-rouge .kp {
+  color: #008800; }
+.highlighter-rouge .kr {
+  color: #008800;
+  font-weight: bold; }
+.highlighter-rouge .kt {
+  color: #888888;
+  font-weight: bold; }
+.highlighter-rouge .m {
+  color: #0000DD;
+  font-weight: bold; }
+.highlighter-rouge .s,
+.highlighter-rouge .s-Atom {
+  color: #dd2200;
+  background-color: #fff0f0; }
+.highlighter-rouge .na {
+  color: #336699; }
+.highlighter-rouge .nb {
+  color: #003388; }
+.highlighter-rouge .nc {
+  color: #bb0066;
+  font-weight: bold; }
+.highlighter-rouge .no {
+  color: #003366;
+  font-weight: bold; }
+.highlighter-rouge .nd {
+  color: #555555; }
+.highlighter-rouge .ne {
+  color: #bb0066;
+  font-weight: bold; }
+.highlighter-rouge .nf {
+  color: #0066bb;
+  font-weight: bold; }
+.highlighter-rouge .nl {
+  color: #336699;
+  font-style: italic; }
+.highlighter-rouge .nn {
+  color: #bb0066;
+  font-weight: bold; }
+.highlighter-rouge .py {
+  color: #336699;
+  font-weight: bold; }
+.highlighter-rouge .nt {
+  color: #bb0066;
+  font-weight: bold; }
+.highlighter-rouge .nv {
+  color: #336699; }
+.highlighter-rouge .ow {
+  color: #008800; }
+.highlighter-rouge .w {
+  color: #bbbbbb; }
+.highlighter-rouge .mf {
+  color: #0000DD;
+  font-weight: bold; }
+.highlighter-rouge .mh {
+  color: #0000DD;
+  font-weight: bold; }
+.highlighter-rouge .mi {
+  color: #0000DD;
+  font-weight: bold; }
+.highlighter-rouge .mo {
+  color: #0000DD;
+  font-weight: bold; }
+.highlighter-rouge .sb {
+  color: #dd2200;
+  background-color: #fff0f0; }
+.highlighter-rouge .sc {
+  color: #dd2200;
+  background-color: #fff0f0; }
+.highlighter-rouge .sd {
+  color: #dd2200;
+  background-color: #fff0f0; }
+.highlighter-rouge .s2 {
+  color: #dd2200;
+  background-color: #fff0f0; }
+.highlighter-rouge .se {
+  color: #0044dd;
+  background-color: #fff0f0; }
+.highlighter-rouge .sh {
+  color: #dd2200;
+  background-color: #fff0f0; }
+.highlighter-rouge .si {
+  color: #3333bb;
+  background-color: #fff0f0; }
+.highlighter-rouge .sx {
+  color: #22bb22;
+  background-color: #f0fff0; }
+.highlighter-rouge .sr {
+  color: #008800;
+  background-color: #fff0ff; }
+.highlighter-rouge .s1 {
+  color: #dd2200;
+  background-color: #fff0f0; }
+.highlighter-rouge .ss {
+  color: #aa6600;
+  background-color: #fff0f0; }
+.highlighter-rouge .bp {
+  color: #003388; }
+.highlighter-rouge .vc {
+  color: #336699; }
+.highlighter-rouge .vg {
+  color: #dd7700; }
+.highlighter-rouge .vi {
+  color: #3333bb; }
+.highlighter-rouge .il {
+  color: #0000DD;
+  font-weight: bold; }
 
 h1, h2, h3, p, ul, ol, li, dl, dt, dd, pre {
   margin: 0;
